--- a/CSS/CSS1/index.html
+++ b/CSS/CSS1/index.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS</title>
+    <title>CSS Introduction.</title>
     <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-
-    <h1>Getting Started With CSS</h1>
+    <h1>Getting Started with CSS</h1>
+    
 </body>
-
 </html>
