FreecodeCamp Questions on Responsive Web Design.
Just Started doing Questions of FreeCodeCamp of Legacy Responsive Web Design.

--- a/CSS/CSS1/index.html
+++ b/CSS/CSS1/index.html
@@ -1,13 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CSS Introduction.</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+
+  <body>
     <h1>Getting Started with CSS</h1>
+    <p id="paragrapgh" class="paragraph">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo,
+      expedita.
+    </p>
+
+    <ul>
+      <li class="html">HTML</li>
+      <li class="css">CSS</li>
+      <li class="javascript">JavaScript</li>
+      <li class="react">React</li>
+    </ul>
     
-</body>
+    <div class="inheritance">
+      <h3>Inheritance</h3>
+      <p>All About Inheritance</p>
+      <button type="submit" class="submit">Submit</button>
+    </div>
+
+  </body>
 </html>
